<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/update_event"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/update_event"/>
    <item
        android:id="@+id/invite_friends"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/invite_friends"/>
    <item
        android:id="@+id/add_to_calendar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_to_calendar"/>
    <item
        android:id="@+id/send_remind"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/send_remind"/>
    <item
        android:id="@+id/share_event"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/share_event"/>
    <item
        android:id="@+id/delete_event"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_event"/>
    <item
        android:id="@+id/cancel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/cancel"/>

</menu>