<RelativeLayout android:layout_height="match_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white">
    <include android:id="@+id/titlebar"
        android:layout_alignParentTop="true"
        layout="@layout/title_bar"/>
    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_below="@+id/titlebar">
        <RelativeLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/lay1">
            <ImageView android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/default_image"
                android:scaleType="fitXY"
                android:layout_alignParentLeft="true"
                android:id="@+id/image"></ImageView>
            <RelativeLayout android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@+id/image"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp">
                <TextView android:layout_alignParentTop="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/mgray"
                    android:text="@string/name"
                    android:id="@+id/t1"
                    android:layout_marginTop="10dp"/>
                <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/mgreen"
                    android:layout_below="@+id/t1"
                    android:id="@+id/t2"
                    android:singleLine="true"
                    android:ellipsize="end"/>
                 <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/mgray"
                    android:layout_below="@+id/t2"
                    android:id="@+id/t3"
                    android:text="@string/age"
                    android:layout_marginTop="10dp"/>
                  <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/mgreen"
                    android:layout_below="@+id/t3"
                    android:id="@+id/t4"/>
                   <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/mgray"
                    android:layout_below="@+id/t4"
                    android:id="@+id/t5"
                    android:text="@string/gender"
                    android:layout_marginTop="10dp"/>
                    <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/mgreen"
                    android:layout_below="@+id/t5"
                    android:id="@+id/t6"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/lay1"
            android:layout_marginTop="15dp">
            <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textColor="@color/mgray"
               android:layout_alignParentTop="true"
               android:id="@+id/t7"
               android:text="@string/cell"/>
             <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textColor="@color/mgreen"
               android:layout_below="@+id/t7"
               android:id="@+id/t8"/>
              <TextView 
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:textColor="@color/mgray"
               android:layout_below="@+id/t8"
               android:id="@+id/t9"
               android:text="@string/description"
               android:layout_marginTop="10dp"/>
               <TextView 
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:textColor="@color/mgreen"
               android:layout_below="@+id/t9"
               android:id="@+id/t10"/>
        </RelativeLayout>
    </RelativeLayout>
    <Button android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/click_btn"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/logout"
        android:visibility="gone"/>
    <View android:id="@+id/transview"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/blacktrans"
        android:visibility="invisible"/>
   
</RelativeLayout>