<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <!-- <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="2.0"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash_name"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

    </LinearLayout> -->
    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash_name"
            android:textColor="@color/lightwhite"
            android:textSize="45sp"
            android:textStyle="bold"
            android:layout_marginBottom="150dp" />
        <LinearLayout android:id="@+id/sl_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/bg_login"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="invisible">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_login"
                android:layout_marginBottom="@dimen/slash_vertical_margin_bottom"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash_login"
                android:textColor="@color/white"
            	android:textStyle="bold"/>
            
        </LinearLayout>
        <LinearLayout android:id="@+id/sl_skip_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/bg_skip_login"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_skip_login"
                android:layout_marginBottom="@dimen/slash_vertical_margin_bottom"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash_skil_login"
                android:textColor="@color/white"
            	android:textStyle="bold"/>
        </LinearLayout>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/footer_name"/>
    </LinearLayout>

</LinearLayout>
